# mpi-examples

./: .clang-format  .gitignore  .travis.yml  Makefile  Makefile.in  README.md  bench.pbs  bootstrap.sh  cart-active-fence-shmem.cpp  cart-active-fence.cpp  cart-active-pscw.cpp  cart-fompi-counter.cpp  cart-fompi-notifyput.cpp  cart-fompi-pscw.cpp  cart-immediate-msg.cpp  cart-ofi-counter.cpp  cart-passive-counter.cpp  cart-pscw-bug.cpp  cart-pscw.c  cart-shmem-counter.cpp  checker.cpp  config.h.in  configure  configure.ac  grid.cpp  grid.hpp  knl.c  knl.h  my-malloc.cpp  my-malloc.hpp  ofi.cpp  ofi.hpp  openmp.hpp  pmi.cpp  pmi.hpp  quantile-50-95.hpp  quantile-50-99.hpp  quantile-95-95.hpp  shmem.cpp  shmem.hpp  (+2 more)
m4/: ax_prog_cc_mpi.m4  ax_prog_cxx_mpi.m4
